# jacques_tanguy

./: .gitignore  README.md
components/black-and-white/: README.md  pyproject.toml
components/black-and-white/notebook/: second_exploration.ipynb
