[tool.poetry]
name = "black-and-white"
version = "0.1.0"
description = ""
authors = ["Pascal Ghaname <pascaljunior49@gmail.com>"]
readme = "README.md"
packages = [{include = "black_and_white", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pillow = "^10.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
